# Moxie

./: README.md  meson.build  meson_options.txt
.github/workflows/: ci-meson.yml
clutter/: meson.build
cogl/cogl/: cogl-wayland-server.h
data/: meson.build
docs/: xlibre-api-mapping.md
src/backends/x11/: meta-backend-x11.c
src/core/: display.c
src/lib/xlibre/: meson.build  test-xlibre-shim.c  xlibre-compat.h  xlibre-shim.c  xlibre-shim.h
src/x11/: meta-x11-display.c
